--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="search_notes">Search notes</string>
     <string name="note_title">Note Title</string>
     <string name="note_subtitle">Note Subtitle</string>
+    <string name="add_your_note_here">Add your note here</string>
 </resources>
