--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="note_title">Note Title</string>
     <string name="note_subtitle">Note Subtitle</string>
     <string name="add_your_note_here">Add your note here</string>
+    <string name="color_picker">Color Picker</string>
+    <string name="pick_color">Pick Color</string>
 </resources>
