--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="add_your_note_here">Add your note here</string>
     <string name="color_picker">Color Picker</string>
     <string name="pick_color">Pick Color</string>
+    <string name="add_image">Add Image</string>
 </resources>
