--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="enter_url">Enter Url</string>
     <string name="add">ADD</string>
     <string name="cancel">Cancel</string>
+    <string name="delete_note">Delete Note</string>
+    <string name="delete_note_question">Do you really want to delete this note?</string>
 </resources>
